fix: add proper spacing before first transit country field

--- a/pages/TravelInfo.module.css
+++ b/pages/TravelInfo.module.css
@@ -463,6 +463,10 @@
   margin-bottom: 25px;
 }
 
+.searchContainerWithSpacing {
+  margin-top: 24px;
+}
+
 .searchWrapper {
   position: relative;
   width: 100%;
